# dtk_player_statistics

./: .gitignore  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
config/: example_config.yaml  prod_config.yaml
dtk_stats/: cli.py  config.py  exporter.py  extractor.py  filter.py  itf_extractor.py  models.py  scraper.py
output/: player_data.csv
tests/: conftest.py  test_config.py  test_exporter.py  test_extractor.py  test_filter.py
