[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dtk-player-statistics"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "playwright>=1.44",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "python-dateutil>=2.9",
    "httpx>=0.27",
    "pandas>=2.0",
    "streamlit>=1.35",
    "plotly>=5.20",
]

[project.scripts]
dtk-stats = "dtk_stats.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["dtk_stats"]

[tool.ruff]
line-length = 100
target-version = "py311"
